2014-04-05  Holger Seelig  <holger.seelig@yahoo.de>

	* InlineTimer.wrl: 

2014-04-05  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-04-05  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* URL.wrl:
	* ComposedShader.wrl: 

2014-04-05  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d:
	* CylinderSensor2.x3dv: 

2014-04-04  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-04-04  Holger Seelig  <holger.seelig@yahoo.de>

	* InlineTimer.wrl:
	* GeoCoordinate.x3d:
	* GoldenSphereAnimation.wrl: 

2014-04-03  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-04-03  Holger Seelig  <holger.seelig@yahoo.de>

	* InlineTimer.wrl: 

2014-04-03  Holger Seelig  <holger.seelig@yahoo.de>

	* InlineTimer.wrl: 

2014-04-02  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-04-02  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-04-02  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-04-01  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d:
	* OutlineEditor.wrl:
	* ScreenFontStyle.wrl: 

2014-04-01  Holger Seelig  <holger.seelig@yahoo.de>

	* Comment.x3d:
	* Comments.wrl:
	* OutlineEditor.x3d:
	* OutlineEditor.wrl:
	* OutlineEditorXXX.wrl: 

2014-04-01  Holger Seelig  <holger.seelig@yahoo.de>

	* SnapTarget.x3dv:
	* OutlineEditor.x3d: 

2014-04-01  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-03-31  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-03-31  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-03-31  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-03-30  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* OutlineEditorXXX.wrl:
	* RuntimeNameScopeDEF.x3dv: 

2014-03-30  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* SnapTarget.x3dv:
	* OutlineEditor.wrl:
	* OutlineEditor.x3d:
	* InlineTimer.wrl: