@@ -85,7 +85,7 @@
         skyAngle='0.8, 1.2, 1.5, 1.55, 1.5708'
         skyColor='0.0196078 0.0196078 0.0196078, 0.054902 0.0705882 0.0862745, 0.203922 0.243137 0.313726, 0.541176 0.462745 0.435294, 0.745098 0.541176 0.376471, 0.890196 0.537255 0.172549'
         groundColor='0 0 0'/>
-    <Viewpoint
+    <Viewpoint DEF='xxx'
         description='OutlineEditor'
         position='1.46307 2.24268 0.93119'
         orientation='0.657858 0.711081 0.248166 5.17775'
@@ -112,11 +112,7 @@
       <fieldValue name='cycleInterval' value='10'/>
       <fieldValue name='loop' value='true'/>
     </ProtoInstance>
-    <ProtoInstance name='Rotor2' DEF='Rotor2'>
-      <fieldValue name='metadata'>
-        <MetadataBoolean/>
-      </fieldValue>
-    </ProtoInstance>
+    <ProtoInstance name='Rotor2' DEF='Rotor2'/>
     <ImageTexture/>
     <Transform DEF='Inline'
         translation='5.51299 0.468949 1'
@@ -150,7 +146,7 @@
       <ProximitySensor USE='_1'/>
       <Transform DEF='Box'
           translation='1.40843 1.10727 0.193803'
-          rotation='0 0 1 5.47141'
+          rotation='0 0 1 5.05381'
           scale='0.2 0.2 0.2'>
         <Transform>
           <Shape>
@@ -244,7 +240,7 @@
         </Shape>
       </Transform>
     </Anchor>
-    <Collision>
+    <Collision DEF='sss'>
       <ProtoInstance name='Children1'>
         <fieldValue name='children1'>
           <Transform DEF='Cylinder'
@@ -336,5 +332,7 @@
     <TextureTransform/>
     <ROUTE fromNode='Rotor' fromField='rotation_changed' toNode='Box' toField='set_rotation'/>
     <ROUTE fromNode='Sensors' fromField='translation_changed' toNode='Inline' toField='set_translation'/>
+    <ROUTE fromNode='xxx' fromField='position_changed' toNode='xxx' toField='set_centerOfRotation'/>
+    <ROUTE fromNode='Rotor2' fromField='pauseTime_changed' toNode='Rotor2' toField='set_resumeTime'/>
   </Scene>
 </X3D>
