@@ -1,5 +1,9 @@
 2014-04-05  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* OutlineEditor.x3d: 
+
+2014-04-05  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* InlineTimer.wrl: 
 
 2014-04-05  Holger Seelig  <holger.seelig@yahoo.de>
